<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Link</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="name">用户名</string>
    <string name="signin">注册</string>
    <string name="no_empty_account">账号不能为空</string>
    <string name="no_empty_password">密码不能为空</string>
    <string name="no_empty_name">用户名不能为空</string>
    <string name="error_password">密码错误</string>
    <string name="error">错误</string>
    <string name="comfirm">确定</string>
    <string name="broadcast_discussion">话题讨论</string>
    <string name="loading">加载中...</string>
    <string name="broadcast_activity">话题</string>
    <string name="friends_activity">好友</string>
    <string name="letter_activity">私信</string>

</resources>
