<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:minHeight="165dip"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:singleLine="true"
            android:paddingLeft="10dip"
            android:hint="@string/account"
            android:id="@+id/account"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:password="true"
            android:singleLine="true"
            android:paddingLeft="10dip"
            android:hint="@string/password"
            android:id="@+id/password"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:weightSum="11"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:text="@string/signin"
                android:textColor="#7089c0"
                android:textSize="18sp"
                android:clickable="true"
                android:id="@+id/signin"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="45dip"
                android:layout_weight="1"
                android:minWidth="80dip"
                android:text="@string/login"
                android:textColor="#000"
                android:id="@+id/button_login"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>